--- a/MyWebApp/Pages/Index.cshtml
+++ b/MyWebApp/Pages/Index.cshtml
@@ -1,11 +1,14 @@
 ﻿@page
 @model IndexModel
 @{
-    ViewData["Title"] = "Home page";
+    ViewData["Title"] = "Teste";
 }
 
 <div class="text-center">
 <h1>Cara isso é muito massa</h1>
 <p class="p">A hora é @DateTime.Now</p>
+
+<a href="#" @oncl></a>
+
 
 </div>
