--- a/MyWebApp/Pages/Index.cshtml
+++ b/MyWebApp/Pages/Index.cshtml
@@ -8,7 +8,11 @@
 <h1>Cara isso é muito massa</h1>
 <p class="p">A hora é @DateTime.Now</p>
 
-<a href="#"></a>
+
+<script>
+    var legal = 10;
+</script>
+<input type="text" onmouseover="">
 
 
 </div>
